--- a/src/components/Cards/index.css
+++ b/src/components/Cards/index.css
@@ -13,7 +13,9 @@
 
 .card-container {
     display: flex;
-    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-content h4 {
@@ -21,4 +23,16 @@
     font-size: large;
     font-weight: 500;
     margin-top: 15px;
+}
+
+.logo{
+    width: 230px;
+    object-fit: fill;
+}
+
+.card-container-principal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
