--- a/src/components/Cards/index.css
+++ b/src/components/Cards/index.css
@@ -13,6 +13,7 @@
 
 .card-container {
     display: flex;
+    flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
