--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -10,9 +10,13 @@
 }
 
 .navbar {
-    margin: 10px 50px 0 50px;
+    padding: 10px 50px 0 50px;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    top: 10;
+    width: 92%;
+    background-color: #2c2d32b0;
 }
 
 .navbar-logo {
